# agntcy-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  server.py
src/clients/: __init__.py
src/tools/: __init__.py  agntcy.py  agntcy_store.py
