[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agntcy-mcp-server"
version = "0.1.0"
description = "MCP bridge for the AGNTCY multi-agent network — agent registry, ACP messaging, SLIM protocol, capability discovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AiAgentKarl"}
]
keywords = ["mcp", "agntcy", "acp", "slim", "agent", "protocol", "multi-agent", "ai", "cisco", "linux-foundation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/agntcy-mcp-server"
Repository = "https://github.com/AiAgentKarl/agntcy-mcp-server"
Issues = "https://github.com/AiAgentKarl/agntcy-mcp-server/issues"

[project.scripts]
agntcy-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
